revert to old styling
revert to old fonts, color palette, changed svgs from red to blue

--- a/css/about.css
+++ b/css/about.css
@@ -25,6 +25,8 @@ body {
 	margin: 0 auto;
 	clear: both;
 }
+/* to change the color of the SVG icons, go to html and Find & Replace the blue (3,94,123) for the red (224,27,60)*/
+
 .titleicon img {
 	width: 80px;
 	margin: 0 auto;
@@ -39,7 +41,7 @@ body {
 
 a .fa-chevron-down {
 	clear: both;
-	color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
+	color: rgba(3,94,123,1); /* OLD BLUE */
 }
 a:hover .fa-chevron-down {
 	text-decoration: none;
