--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,5 @@
 a {
-  color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
-}
+  color: rgba(3,94,123,1); /* OLD BLUE */}
 a:hover {
 }
 .breadcrumbs {
@@ -18,9 +17,6 @@ a:hover {
 }
 .container h2 {
   clear: both;
-}
-.container h3 {
-  font-family: Montserrat, Helvetica Neue, sans-serif;
 }
 .container img {
   margin: 0 auto;
@@ -69,7 +65,7 @@ a:hover {
   color: white;
 }
 .button:hover {
-  background-color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
+  background-color: rgba(3,94,123,1); /* OLD BLUE */
 }
 .buttonbook {
   background-color: rgba(137,133,133,1); /* MENU GREY */
@@ -83,7 +79,7 @@ a:hover {
   color: white;
 }
 .buttonbook:hover {
-  background-color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
+  background-color: rgba(3,94,123,1); /* OLD BLUE */
 }
 .buttonbook h2 {
 }
