--- a/css/classes.css
+++ b/css/classes.css
@@ -17,7 +17,7 @@
   color: white;
 }
 .payment .button:hover {
-  background-color: rgba(224,27,60,1); /* LOGO RED */
+  background-color: rgba(56,49,50,1); /* DARK GREY */
 }
 .payment h1 {
   padding-bottom: 2%;
@@ -136,8 +136,7 @@
   overflow: auto;
 }
 .otherclass a {
-  color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
-  text-decoration: none;
+color: rgba(3,94,123,1); /* OLD BLUE */  text-decoration: none;
 }
 
 .description {
