--- a/css/music.css
+++ b/css/music.css
@@ -1,6 +1,5 @@
 .breadcrumbs a {
-  color: rgba(224,27,60,1); /* LOGO RED */
-}
+  color: rgba(3,94,123,1); /* OLD BLUE */}
 
 .music {
   width: 80%;
@@ -66,7 +65,7 @@
   margin: 0.5%;
 }
 .songtagbox a:hover {
-  background-color: rgba(224,27,60,1);
+  background-color: rgba(3,94,123,1); /* OLD BLUE */
   text-decoration: none;
   padding: 0.5% 0.2%;
   color: white;
