Revert "Merge branch 'master' into php-building"
This reverts commit 39684adc74d6948dfe47494a621a34a6505fb04f, reversing
changes made to b4d4f60f00e08981bc9f4a0fd70b9bd96933d742.

--- a/css/about.css
+++ b/css/about.css
@@ -25,8 +25,6 @@ body {
 	margin: 0 auto;
 	clear: both;
 }
-/* to change the color of the SVG icons, go to html and Find & Replace the blue (3,94,123) for the red (224,27,60)*/
-
 .titleicon img {
 	width: 80px;
 	margin: 0 auto;
@@ -41,7 +39,7 @@ body {
 
 a .fa-chevron-down {
 	clear: both;
-	color: rgba(3,94,123,1); /* OLD BLUE */
+	color: rgba(224,27,60,1); /* LOGO RASPBERRY RED */
 }
 a:hover .fa-chevron-down {
 	text-decoration: none;
