--- a/css/gingarte.css
+++ b/css/gingarte.css
@@ -1,3 +1,37 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-Light.otf') format('opentype');
+  font-weight: 300;
+  font-weight: regular;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-Regular.otf') format('opentype');
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-SemiBold.otf') format('opentype');
+  font-weight: 500;
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-Bold.otf') format('opentype');
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-UltraLight.otf') format('opentype');
+  font-weight: 200;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('montserrat/Montserrat-Hairline.otf') format('opentype');
+  font-weight: 100;
+}
+
+/* Background pattern from subtlepatterns.com */
 header {
   width: 90%;
   margin: 0 auto;
@@ -29,16 +63,14 @@ h2 {
 }
 
 body {
-  font-family: Oswald, Helvetica Neue, sans-serif;
+  font-family: Montserrat, Helvetica Neue, sans-serif;
   font-weight: 300;
   margin: 0;
   color: rgba(56,49,50,1); /* MAIN GREY FONT */
 }
-header {
-  text-align: center; /* NEED THIS ON MOBILE */
-}
+
 .button {
-  background-color: rgba(3,94,123,1); /* OLD BLUE */
+  background-color: rgba(137,133,133,1); /* MENU GREY */
   color: white;
   border: 1px solid white;
   text-align: center;
@@ -48,7 +80,7 @@ header {
   padding: 1%;
 }
 .button:hover {
-  background-color: rgba(56,49,50,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .button a {
   color: white;
@@ -57,6 +89,10 @@ header {
   width: 50%;
   margin: 0 auto;
   margin-bottom: 5%;
+}
+
+header {
+  text-align: center;
 }
 .contents {
   font-style: italic;
@@ -67,7 +103,7 @@ header {
 
 a {
   text-decoration: none;
-  color: rgba(56,49,50,1); /* MAIN GREY FONT */
+  color: black;
 }
 
 
@@ -97,7 +133,8 @@ nav {
 
 }
 .menu-bar {
-  background-color: rgba(3,94,123,1); /* OLD BLUE */
+  /* background-color: rgba(3,94,123,1);  OLD BLUE */
+  background-color: rgba(137,133,133,1); /* MENU GREY */
   text-align: center;
   padding: 15px 0;
   width: 100%;
@@ -122,7 +159,7 @@ nav {
 
 }
 .news-feature a:hover {
-  background-color: rgba(56,49,50,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .arrow-icon {
   float: right;
@@ -143,7 +180,7 @@ nav {
   width: 100%;
   height: 250px;
   clear: both;
-  background-color: rgba(3,94,123,1); /* OLD BLUE */
+  background-color: rgba(137,133,133,1); /* MENU GREY */
   z-index: 1;
 }
 /* so the dropdown menu sticks with the menu bar location */
@@ -158,13 +195,13 @@ nav {
 }
 .dropdown li:hover {
   /* highlight mobile menu items on hover */
-  background-color: rgba(56,49,50,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
   width: 200px;
 
 }
 .dropdown .current-menu-item:hover {
   /* but don't change background color behind current mobile menu item */
-  background-color: rgba(3,94,123,1); /* OLD BLUE */
+  background-color: rgba(137,133,133,1); /* MENU GREY */
 }
 
 /* change dispaly of current mobile menu item, WP-generated class */
@@ -230,11 +267,9 @@ nav {
   padding-bottom: 3%;
   border-bottom: 3px double rgba(137,133,133,1);
 }
-li {
-  list-style-type: circle;
-}
 .items li {
   text-align: left;
+  list-style-type: circle;
 }
 .items a:hover {
   text-decoration: underline;
@@ -320,7 +355,7 @@ li {
 
 }
 .pagination a {
-  color: rgba(3,94,123,1); /* BLUE */
+  color: rgba(224,27,60,1); /* LOGO RED */
 }
 .news-feature-item h3 {
   margin-bottom: 0;
@@ -333,7 +368,7 @@ li {
 /* -- FOOTER STYLING -- */
 footer {
   clear: both;
-  background-color: rgba(3,94,123,1); /* OLD BLUE */
+  background-color: rgba(137,133,133,1); /* MENU GREY */
   color: rgba(251,252,255,1);
   text-align: center;
   font-size: 80%;
@@ -361,7 +396,7 @@ footer a:hover {
   border: 1px solid white;
 }
 .buttonelist:hover {
-  background-color: rgba(56,49,50,1);
+  background-color: rgba(224,27,60,1); /* LOGO RED */
 }
 .buttonelist a:hover {
   text-decoration: none;
@@ -376,7 +411,6 @@ footer a:hover {
 }
 .author a {
   font-weight: 400;
-  color: rgba(242,242,242,0.5); /* LIGHT GREY */
 }
 
 
@@ -438,9 +472,10 @@ footer a:hover {
   }
   .menu-full {
     display: block;
-    background-color: rgba(3,94,123,1); /* OLD BLUE */
+    background-color: rgba(137,133,133,1); /* MENU GREY */
     text-align: center;
     overflow: auto;
+    font-family: Montserrat, Helvetica Neue, sans-serif;
     font-size: 1.1em;
     box-shadow: 1px 5px 5px rgba(1,1,1,0.7);
 }
@@ -458,17 +493,18 @@ footer a:hover {
 
   .menu-full li:hover {
     /* highlight menu items on hover */
-    background-color: rgba(56,49,50,1);
+    background-color: rgba(224,27,60,1); /* LOGO RED */
     padding: 1%;
   }
   .menu-full .current-menu-item:hover {
     /* but don't change background color behind current menu item */
-    background-color: rgba(3,94,123,1); /* OLD BLUE */
+    background-color: rgba(137,133,133,1); /* MENU GREY */
   }
 
   /* highlight current menu item, WP-generated class */
   .current-menu-item a {
-    color: rgba(56,49,50,1); /* OLD BLUE */
+    background-color: rgba(137,133,133,1); /* MENU GREY */
+    color: rgba(56,49,50,1); /* MAIN GREY FONT */
   }
   .menu-full .news-feature a {
     border: 1px solid white;
