--- a/css/gingarte.css
+++ b/css/gingarte.css
@@ -54,6 +54,7 @@ h2 {
 }
 .logo {
   margin: 0 auto;
+  padding-top: 10px;
 }
 .mestremarisa {
   font-size: 0.8em;
@@ -405,14 +406,6 @@ footer a:hover {
   width: 225px;
   margin: 0 auto;
 }
-.socialicon {
-  max-width: 40px;
-}
-  @media screen and (min-width: 780px) {
-    .socialicon {
-      max-width: 70px;
-    }
-  }
 .author {
   font-size: 0.8em;
   font-weight: 200;
@@ -440,6 +433,7 @@ footer a:hover {
   .brandtext {
     float: left;
     padding: 50px 0 50px 50px;
+    width: 510px;
   }
   .brandhead h1 {
     text-align: left;
