--- a/css/gingarte.css
+++ b/css/gingarte.css
@@ -406,6 +406,9 @@ footer a:hover {
   width: 225px;
   margin: 0 auto;
 }
+.socialicon {
+  width: 50px;
+}
 .author {
   font-size: 0.8em;
   font-weight: 200;
